y.output
Terminaux inutilisés dans la grammaire

   tCROFERM
   tCROOUVR
   tCHAR
   tNEWLINE
   tTAB
   tBACKSPACE
   tESPACE
   tPOINT


État 0 conflits: 1 réduction/réduction
État 5 conflits: 1 décalage/réduction
État 22 conflits: 2 décalage/réduction
État 39 conflits: 1 réduction/réduction
État 57 conflits: 4 décalage/réduction


Grammaire

    0 $accept: start $end

    1 start: tINT rMAIN
    2      | rMAIN
    3      | rBODY

    4 rMAIN: tMAIN tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM

    5 rBODY: rEXPR
    6      | %empty

    7 rEXPR: rDECL rEXPR
    8      | rAFFECT rEXPR
    9      | rPRINTF rEXPR
   10      | %empty

   11 rINT: tINT
   12     | tCONST tINT

   13 rDECL: rINT tVAR tPTVIRGULE
   14      | rINT tVAR rMULTIPLEVAR tPTVIRGULE

   15 rAFFECT: rINT tVAR tEGAL rNBR tPTVIRGULE
   16        | tVAR tEGAL rNBR tPTVIRGULE
   17        | rINT tVAR rMULTIPLEVAR tEGAL rNBR tPTVIRGULE
   18        | tVAR rMULTIPLEVAR tEGAL rNBR tPTVIRGULE

   19 rMULTIPLEVAR: tVIRGULE tVAR rMULTIPLEVAR
   20             | %empty

   21 rPRINTF: tPRINTF tPAROUVR rTEXTE tPARFERM tPTVIRGULE

   22 rNBR: tVAR
   23     | tNBR
   24     | rNBR rOPERATOR rNBR
   25     | tPAROUVR rNBR tPARFERM

   26 rOPERATOR: tPLUS
   27          | tMOINS
   28          | tMUL
   29          | tDIVISER

   30 rTEXTE: tVAR rTEXTE
   31       | tVAR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 1 11 12
tMAIN (259) 4
tCONST (260) 12
tPARFERM (261) 4 21 25
tPAROUVR (262) 4 21 25
tCROFERM (263)
tCROOUVR (264)
tACOFERM (265) 4
tACOOUVR (266) 4
tCHAR (267)
tMUL (268) 28
tNEWLINE (269)
tTAB (270)
tBACKSPACE (271)
tPLUS (272) 26
tMOINS (273) 27
tPRINTF (274) 21
tDIVISER (275) 29
tEGAL (276) 15 16 17 18
tPTVIRGULE (277) 13 14 15 16 17 18 21
tESPACE (278)
tVIRGULE (279) 19
tPOINT (280)
tVAR (281) 13 14 15 16 17 18 19 22 30 31
tNBR (282) 23


Non-terminaux, suivis des règles où ils apparaissent

$accept (28)
    à gauche: 0
start (29)
    à gauche: 1 2 3, à droite: 0
rMAIN (30)
    à gauche: 4, à droite: 1 2
rBODY (31)
    à gauche: 5 6, à droite: 3 4
rEXPR (32)
    à gauche: 7 8 9 10, à droite: 5 7 8 9
rINT (33)
    à gauche: 11 12, à droite: 13 14 15 17
rDECL (34)
    à gauche: 13 14, à droite: 7
rAFFECT (35)
    à gauche: 15 16 17 18, à droite: 8
rMULTIPLEVAR (36)
    à gauche: 19 20, à droite: 14 17 18 19
rPRINTF (37)
    à gauche: 21, à droite: 9
rNBR (38)
    à gauche: 22 23 24 25, à droite: 15 16 17 18 24 25
rOPERATOR (39)
    à gauche: 26 27 28 29, à droite: 24
rTEXTE (40)
    à gauche: 30 31, à droite: 21 30


État 0

    0 $accept: . start $end

    tINT     décalage et aller à l'état 1
    tMAIN    décalage et aller à l'état 2
    tCONST   décalage et aller à l'état 3
    tPRINTF  décalage et aller à l'état 4
    tVAR     décalage et aller à l'état 5

    $end      réduction par utilisation de la règle 6 (rBODY)
    $end      [réduction par utilisation de la règle 10 (rEXPR)]
    $défaut  réduction par utilisation de la règle 6 (rBODY)

    start    aller à l'état 6
    rMAIN    aller à l'état 7
    rBODY    aller à l'état 8
    rEXPR    aller à l'état 9
    rINT     aller à l'état 10
    rDECL    aller à l'état 11
    rAFFECT  aller à l'état 12
    rPRINTF  aller à l'état 13


État 1

    1 start: tINT . rMAIN
   11 rINT: tINT .

    tMAIN  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 11 (rINT)

    rMAIN  aller à l'état 14


État 2

    4 rMAIN: tMAIN . tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM

    tPAROUVR  décalage et aller à l'état 15


État 3

   12 rINT: tCONST . tINT

    tINT  décalage et aller à l'état 16


État 4

   21 rPRINTF: tPRINTF . tPAROUVR rTEXTE tPARFERM tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 17


État 5

   16 rAFFECT: tVAR . tEGAL rNBR tPTVIRGULE
   18        | tVAR . rMULTIPLEVAR tEGAL rNBR tPTVIRGULE

    tEGAL     décalage et aller à l'état 18
    tVIRGULE  décalage et aller à l'état 19

    tEGAL  [réduction par utilisation de la règle 20 (rMULTIPLEVAR)]

    rMULTIPLEVAR  aller à l'état 20


État 6

    0 $accept: start . $end

    $end  décalage et aller à l'état 21


État 7

    2 start: rMAIN .

    $défaut  réduction par utilisation de la règle 2 (start)


État 8

    3 start: rBODY .

    $défaut  réduction par utilisation de la règle 3 (start)


État 9

    5 rBODY: rEXPR .

    $défaut  réduction par utilisation de la règle 5 (rBODY)


État 10

   13 rDECL: rINT . tVAR tPTVIRGULE
   14      | rINT . tVAR rMULTIPLEVAR tPTVIRGULE
   15 rAFFECT: rINT . tVAR tEGAL rNBR tPTVIRGULE
   17        | rINT . tVAR rMULTIPLEVAR tEGAL rNBR tPTVIRGULE

    tVAR  décalage et aller à l'état 22


État 11

    7 rEXPR: rDECL . rEXPR

    tINT     décalage et aller à l'état 23
    tCONST   décalage et aller à l'état 3
    tPRINTF  décalage et aller à l'état 4
    tVAR     décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 10 (rEXPR)

    rEXPR    aller à l'état 24
    rINT     aller à l'état 10
    rDECL    aller à l'état 11
    rAFFECT  aller à l'état 12
    rPRINTF  aller à l'état 13


État 12

    8 rEXPR: rAFFECT . rEXPR

    tINT     décalage et aller à l'état 23
    tCONST   décalage et aller à l'état 3
    tPRINTF  décalage et aller à l'état 4
    tVAR     décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 10 (rEXPR)

    rEXPR    aller à l'état 25
    rINT     aller à l'état 10
    rDECL    aller à l'état 11
    rAFFECT  aller à l'état 12
    rPRINTF  aller à l'état 13


État 13

    9 rEXPR: rPRINTF . rEXPR

    tINT     décalage et aller à l'état 23
    tCONST   décalage et aller à l'état 3
    tPRINTF  décalage et aller à l'état 4
    tVAR     décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 10 (rEXPR)

    rEXPR    aller à l'état 26
    rINT     aller à l'état 10
    rDECL    aller à l'état 11
    rAFFECT  aller à l'état 12
    rPRINTF  aller à l'état 13


État 14

    1 start: tINT rMAIN .

    $défaut  réduction par utilisation de la règle 1 (start)


État 15

    4 rMAIN: tMAIN tPAROUVR . tPARFERM tACOOUVR rBODY tACOFERM

    tPARFERM  décalage et aller à l'état 27


État 16

   12 rINT: tCONST tINT .

    $défaut  réduction par utilisation de la règle 12 (rINT)


État 17

   21 rPRINTF: tPRINTF tPAROUVR . rTEXTE tPARFERM tPTVIRGULE

    tVAR  décalage et aller à l'état 28

    rTEXTE  aller à l'état 29


État 18

   16 rAFFECT: tVAR tEGAL . rNBR tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 33


État 19

   19 rMULTIPLEVAR: tVIRGULE . tVAR rMULTIPLEVAR

    tVAR  décalage et aller à l'état 34


État 20

   18 rAFFECT: tVAR rMULTIPLEVAR . tEGAL rNBR tPTVIRGULE

    tEGAL  décalage et aller à l'état 35


État 21

    0 $accept: start $end .

    $défaut  accepter


État 22

   13 rDECL: rINT tVAR . tPTVIRGULE
   14      | rINT tVAR . rMULTIPLEVAR tPTVIRGULE
   15 rAFFECT: rINT tVAR . tEGAL rNBR tPTVIRGULE
   17        | rINT tVAR . rMULTIPLEVAR tEGAL rNBR tPTVIRGULE

    tEGAL       décalage et aller à l'état 36
    tPTVIRGULE  décalage et aller à l'état 37
    tVIRGULE    décalage et aller à l'état 19

    tEGAL       [réduction par utilisation de la règle 20 (rMULTIPLEVAR)]
    tPTVIRGULE  [réduction par utilisation de la règle 20 (rMULTIPLEVAR)]

    rMULTIPLEVAR  aller à l'état 38


État 23

   11 rINT: tINT .

    $défaut  réduction par utilisation de la règle 11 (rINT)


État 24

    7 rEXPR: rDECL rEXPR .

    $défaut  réduction par utilisation de la règle 7 (rEXPR)


État 25

    8 rEXPR: rAFFECT rEXPR .

    $défaut  réduction par utilisation de la règle 8 (rEXPR)


État 26

    9 rEXPR: rPRINTF rEXPR .

    $défaut  réduction par utilisation de la règle 9 (rEXPR)


État 27

    4 rMAIN: tMAIN tPAROUVR tPARFERM . tACOOUVR rBODY tACOFERM

    tACOOUVR  décalage et aller à l'état 39


État 28

   30 rTEXTE: tVAR . rTEXTE
   31       | tVAR .

    tVAR  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 31 (rTEXTE)

    rTEXTE  aller à l'état 40


État 29

   21 rPRINTF: tPRINTF tPAROUVR rTEXTE . tPARFERM tPTVIRGULE

    tPARFERM  décalage et aller à l'état 41


État 30

   25 rNBR: tPAROUVR . rNBR tPARFERM

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 42


État 31

   22 rNBR: tVAR .

    $défaut  réduction par utilisation de la règle 22 (rNBR)


État 32

   23 rNBR: tNBR .

    $défaut  réduction par utilisation de la règle 23 (rNBR)


État 33

   16 rAFFECT: tVAR tEGAL rNBR . tPTVIRGULE
   24 rNBR: rNBR . rOPERATOR rNBR

    tMUL        décalage et aller à l'état 43
    tPLUS       décalage et aller à l'état 44
    tMOINS      décalage et aller à l'état 45
    tDIVISER    décalage et aller à l'état 46
    tPTVIRGULE  décalage et aller à l'état 47

    rOPERATOR  aller à l'état 48


État 34

   19 rMULTIPLEVAR: tVIRGULE tVAR . rMULTIPLEVAR

    tVIRGULE  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 20 (rMULTIPLEVAR)

    rMULTIPLEVAR  aller à l'état 49


État 35

   18 rAFFECT: tVAR rMULTIPLEVAR tEGAL . rNBR tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 50


État 36

   15 rAFFECT: rINT tVAR tEGAL . rNBR tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 51


État 37

   13 rDECL: rINT tVAR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 13 (rDECL)


État 38

   14 rDECL: rINT tVAR rMULTIPLEVAR . tPTVIRGULE
   17 rAFFECT: rINT tVAR rMULTIPLEVAR . tEGAL rNBR tPTVIRGULE

    tEGAL       décalage et aller à l'état 52
    tPTVIRGULE  décalage et aller à l'état 53


État 39

    4 rMAIN: tMAIN tPAROUVR tPARFERM tACOOUVR . rBODY tACOFERM

    tINT     décalage et aller à l'état 23
    tCONST   décalage et aller à l'état 3
    tPRINTF  décalage et aller à l'état 4
    tVAR     décalage et aller à l'état 5

    tACOFERM  réduction par utilisation de la règle 6 (rBODY)
    tACOFERM  [réduction par utilisation de la règle 10 (rEXPR)]
    $défaut  réduction par utilisation de la règle 6 (rBODY)

    rBODY    aller à l'état 54
    rEXPR    aller à l'état 9
    rINT     aller à l'état 10
    rDECL    aller à l'état 11
    rAFFECT  aller à l'état 12
    rPRINTF  aller à l'état 13


État 40

   30 rTEXTE: tVAR rTEXTE .

    $défaut  réduction par utilisation de la règle 30 (rTEXTE)


État 41

   21 rPRINTF: tPRINTF tPAROUVR rTEXTE tPARFERM . tPTVIRGULE

    tPTVIRGULE  décalage et aller à l'état 55


État 42

   24 rNBR: rNBR . rOPERATOR rNBR
   25     | tPAROUVR rNBR . tPARFERM

    tPARFERM  décalage et aller à l'état 56
    tMUL      décalage et aller à l'état 43
    tPLUS     décalage et aller à l'état 44
    tMOINS    décalage et aller à l'état 45
    tDIVISER  décalage et aller à l'état 46

    rOPERATOR  aller à l'état 48


État 43

   28 rOPERATOR: tMUL .

    $défaut  réduction par utilisation de la règle 28 (rOPERATOR)


État 44

   26 rOPERATOR: tPLUS .

    $défaut  réduction par utilisation de la règle 26 (rOPERATOR)


État 45

   27 rOPERATOR: tMOINS .

    $défaut  réduction par utilisation de la règle 27 (rOPERATOR)


État 46

   29 rOPERATOR: tDIVISER .

    $défaut  réduction par utilisation de la règle 29 (rOPERATOR)


État 47

   16 rAFFECT: tVAR tEGAL rNBR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 16 (rAFFECT)


État 48

   24 rNBR: rNBR rOPERATOR . rNBR

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 57


État 49

   19 rMULTIPLEVAR: tVIRGULE tVAR rMULTIPLEVAR .

    $défaut  réduction par utilisation de la règle 19 (rMULTIPLEVAR)


État 50

   18 rAFFECT: tVAR rMULTIPLEVAR tEGAL rNBR . tPTVIRGULE
   24 rNBR: rNBR . rOPERATOR rNBR

    tMUL        décalage et aller à l'état 43
    tPLUS       décalage et aller à l'état 44
    tMOINS      décalage et aller à l'état 45
    tDIVISER    décalage et aller à l'état 46
    tPTVIRGULE  décalage et aller à l'état 58

    rOPERATOR  aller à l'état 48


État 51

   15 rAFFECT: rINT tVAR tEGAL rNBR . tPTVIRGULE
   24 rNBR: rNBR . rOPERATOR rNBR

    tMUL        décalage et aller à l'état 43
    tPLUS       décalage et aller à l'état 44
    tMOINS      décalage et aller à l'état 45
    tDIVISER    décalage et aller à l'état 46
    tPTVIRGULE  décalage et aller à l'état 59

    rOPERATOR  aller à l'état 48


État 52

   17 rAFFECT: rINT tVAR rMULTIPLEVAR tEGAL . rNBR tPTVIRGULE

    tPAROUVR  décalage et aller à l'état 30
    tVAR      décalage et aller à l'état 31
    tNBR      décalage et aller à l'état 32

    rNBR  aller à l'état 60


État 53

   14 rDECL: rINT tVAR rMULTIPLEVAR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 14 (rDECL)


État 54

    4 rMAIN: tMAIN tPAROUVR tPARFERM tACOOUVR rBODY . tACOFERM

    tACOFERM  décalage et aller à l'état 61


État 55

   21 rPRINTF: tPRINTF tPAROUVR rTEXTE tPARFERM tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 21 (rPRINTF)


État 56

   25 rNBR: tPAROUVR rNBR tPARFERM .

    $défaut  réduction par utilisation de la règle 25 (rNBR)


État 57

   24 rNBR: rNBR . rOPERATOR rNBR
   24     | rNBR rOPERATOR rNBR .

    tMUL      décalage et aller à l'état 43
    tPLUS     décalage et aller à l'état 44
    tMOINS    décalage et aller à l'état 45
    tDIVISER  décalage et aller à l'état 46

    tMUL      [réduction par utilisation de la règle 24 (rNBR)]
    tPLUS     [réduction par utilisation de la règle 24 (rNBR)]
    tMOINS    [réduction par utilisation de la règle 24 (rNBR)]
    tDIVISER  [réduction par utilisation de la règle 24 (rNBR)]
    $défaut  réduction par utilisation de la règle 24 (rNBR)

    rOPERATOR  aller à l'état 48


État 58

   18 rAFFECT: tVAR rMULTIPLEVAR tEGAL rNBR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 18 (rAFFECT)


État 59

   15 rAFFECT: rINT tVAR tEGAL rNBR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 15 (rAFFECT)


État 60

   17 rAFFECT: rINT tVAR rMULTIPLEVAR tEGAL rNBR . tPTVIRGULE
   24 rNBR: rNBR . rOPERATOR rNBR

    tMUL        décalage et aller à l'état 43
    tPLUS       décalage et aller à l'état 44
    tMOINS      décalage et aller à l'état 45
    tDIVISER    décalage et aller à l'état 46
    tPTVIRGULE  décalage et aller à l'état 62

    rOPERATOR  aller à l'état 48


État 61

    4 rMAIN: tMAIN tPAROUVR tPARFERM tACOOUVR rBODY tACOFERM .

    $défaut  réduction par utilisation de la règle 4 (rMAIN)


État 62

   17 rAFFECT: rINT tVAR rMULTIPLEVAR tEGAL rNBR tPTVIRGULE .

    $défaut  réduction par utilisation de la règle 17 (rAFFECT)
